[gd_scene load_steps=9 format=3 uid="uid://cbcgl0jlsfk22"]

[ext_resource type="Texture2D" uid="uid://bwb237sjsh38n" path="res://assets/valve_sheet.png" id="1_jj25u"]
[ext_resource type="Script" path="res://scripts/valves.gd" id="1_juvqk"]
[ext_resource type="PackedScene" uid="uid://b2scmylp2sxwt" path="res://scenes/valve_progress.tscn" id="3_ymwet"]
[ext_resource type="PackedScene" uid="uid://bmqfylfpvwys" path="res://scenes/valve_fixing_sfx.tscn" id="4_hbjpr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sf3vd"]
radius = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kferw"]
atlas = ExtResource("1_jj25u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m8gv"]
atlas = ExtResource("1_jj25u")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qcsqe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kferw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m8gv")
}],
"loop": true,
"name": &"closing",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kferw")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="WaterValveRed" type="Area2D"]
z_index = -50
collision_layer = 32
collision_mask = 2
script = ExtResource("1_juvqk")
fix_color = "RED"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_sf3vd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qcsqe")
animation = &"closing"
autoplay = "default"

[node name="Progress" type="Timer" parent="."]
one_shot = true

[node name="ValveProgress" parent="." instance=ExtResource("3_ymwet")]
offset_left = -5.0
offset_top = -11.0
offset_right = -5.0
offset_bottom = -11.0

[node name="valve_fixing_sfx" parent="." instance=ExtResource("4_hbjpr")]

[connection signal="timeout" from="Progress" to="." method="_on_progress_timeout"]
